--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-    <input type="button" value='+' id="add" ><span id="incomeLabel">111</span><input type="button" value='-' id="minus">
+    <input type="button" value='+' id="add" ><span id="incomeLabel"></span><input type="button" value='-' id="minus">
     <input type="text" id="name">
     <!-- <script src="index.js"></script> -->
 </body>
